confetti-framework/docs#13 improve first time reader exp

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
+  },
+  "dependencies": {
+    "@dovyp/vuepress-plugin-clipboard-copy": "^1.0.0-alpha.7",
+    "vuepress-plugin-clipboard-copy": "master"
   }
 }
