--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vuepress": "^1.8.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
