--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.8.2"
-  },
-  "dependencies": {}
+    "@vuepress/plugin-back-to-top": "^2.0.0-beta.43",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.43",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.43",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-beta.43",
+    "vuepress": "^2.0.0-beta.43"
+  }
 }
