chore: add module type

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Confetti",
+  "name": "confetti",
   "version": "1.0.0",
   "description": "Confetti is a Go (Golang) web application framework with an expressive, elegant syntax. Confetti combines the elegance of Confetti and the simplicity of Go.",
   "main": "index.js",
+  "type": "module",
   "authors": {
     "name": "Reindert Vetter",
     "email": "reindert@outlook.com"
