--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "confetti",
   "version": "1.0.0",
   "description": "Confetti is a Go (Golang) web application framework with an expressive, elegant syntax. Confetti combines the elegance of Confetti and the simplicity of Go.",
-  "main": "index.js",
+  "private": true,
   "type": "module",
   "authors": {
     "name": "Reindert Vetter",
@@ -10,7 +10,7 @@
   },
   "repository": "https://github.com/confetti-framework/docs",
   "scripts": {
-    "dev": "vuepress dev .",
+    "dev": "vuepress dev . --clean-cache",
     "build": "vuepress build ."
   },
   "license": "MIT",
@@ -19,6 +19,8 @@
     "@vuepress/plugin-docsearch": "^2.0.0-beta.51",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.51",
     "@vuepress/plugin-medium-zoom": "^2.0.0-beta.51",
+    "@vuepress/theme-default": "^2.0.0-beta.51",
+    "vue": "^3.2.38",
     "vuepress": "^2.0.0-beta.51"
   }
 }
